test/files/neg/macro-invalidusage-presuper.check
Macros_Test_2.scala:3: error: only concrete field definitions allowed in early object initialization section
class D extends { def x = macro impl } with AnyRef
                      ^
one error found
